@@ -1,10 +1,11 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
 TODO: revisit 59.x timer in the light of modern powersaving
+TODO: ^ maybe just increase it when timerfd, modern linux only thing that counts?
 TODO: document EV_TSTAMP_T
 
-	- the new timerfd code wrongly changed the priority of ther signal
-          fd watcher, which is usuallys harmless unless signal fds are
+	- the 4.31 timerfd code wrongly changes the priority of the signal
+          fd watcher, which is usually harmless unless signal fds are
           also used (found via cpan tester service).
         - support a lot more "uncommon" compile time configurations,
           such as ev_embed enabled but ev_timer disabled.
